--- a/public/admin/admin.pug
+++ b/public/admin/admin.pug
@@ -19,50 +19,44 @@
       br
 
       ul.list-group
+        li.revision.list-group-item
+          span.btn-group.pull-right(role="group", ng-show="!revision.editing")
+            button(
+              type="button",
+              class="btn btn-sm btn-default",
+              ng-click="creating ? null : createNewRevision()",
+              ng-class="{ disabled: creating }",
+            ) {{ creating ? 'creating...' : 'begin new revision' }}
+
         li.revision.list-group-item(
           ng-repeat="revision in revisions",
-          ng-class="{ 'list-group-item-info': revision.active, latest: revision.latest }"
+          ng-class="{ 'list-group-item-info': revision.active && revision.latest, 'list-group-item-warning': revision.active && !revision.latest }",
         )
+          span.revision-label(ng-show="!revision.editing") {{ revision.name }} 
+            em(ng-show="revision.latest") (Latest)
           
-          span.revision-label(ng-show="!revision.editing") {{revision.name}}
-          span.btn-group.pull-right(role="group", ng-show="!revision.editing && !revision.temporary")
+          span.btn-group.pull-right(role="group", ng-show="!revision.editing")
             button(
               type="button",
               class="btn btn-sm btn-default",
               ng-click="editRevision(revision)",
-              ng-show="!revision.latest",
             ) edit name
 
             button(
               type="button",
               class="btn btn-sm btn-info",
-              ng-click="setActiveRevision(revision)",
-              ng-show="!revision.active"
-            ) activate
+              ng-show="!revision.active",
+              ng-click="revision.activating ? null : setActiveRevision(revision)",
+              ng-class="{ disabled: revision.activating }",
+            ) {{ revision.activating ? 'activating...' : 'activate' }}
             
             button(
               type="button",
               class="btn btn-sm btn-danger",
+              ng-show="revisions.length > 1",
               ng-click="revision.deleting ? null : deleteRevision(revision)",
-              ng-show="!revision.latest"
-              ng-class="{ disabled: revision.deleting }"
+              ng-class="{ disabled: revision.deleting }",
             ) {{ revision.deleting ? 'deleting...' : 'delete' }}
-
-            button(
-              type="button",
-              class="btn btn-sm btn-danger",
-              ng-click="revision.clearing ? null : clearLatest()",
-              ng-show="revision.latest"
-              ng-class="{ disabled: revision.clearing }"
-            ) {{ revision.clearing ? 'clearing...' : 'clear latest changes' }}
-
-            button(
-              type="button",
-              class="btn btn-sm btn-success",
-              ng-click="saveNewRevision()",
-              ng-show="revision.latest"
-            ) save as new revision
-
 
           .input-group(ng-show="revision.editing")
             input.form-control(
@@ -76,21 +70,16 @@
                 class="btn btn-sm btn-warning",
                 ng-click="cancelRevisionEdit(revision)",
               ) cancel
-
               button(
                 type="button",
-                class="btn btn-sm btn-success",
-                ng-click="saveRevisionEdit(revision)",
-              ) save
-
+                class="btn btn-sm btn-default",
+                ng-click="revision.savingEdit ? null : saveRevisionEdit(revision)",
+                ng-class="{ disabled: revision.savingEdit }",
+              ) {{ revision.savingEdit ? 'saving...' : 'save' }}
 
     .col-lg-12(ng-show="view=='addUser'")
-
       h3 Add user
-      
       .alert.alert-warning(ng-show="message") {{message}}
-      
-      
       form.form-horizontal(ng-submit="register()")
         .form-group
           label.col-sm-3.control-label User name*
