Fixed export to Google Sheets; closes #34, closes #18.

--- a/public/admin/admin.pug
+++ b/public/admin/admin.pug
@@ -197,4 +197,4 @@
 
         hr(ng-show="exportStatus.url")
         .well.well-sm(ng-show="exportStatus.url")
-          a(href="{{exportStatus.url}}") Access exported spreadsheet at {{exportStatus.url}}
+          a(href="{{exportStatus.url}}" target="_blank") Access exported spreadsheet at {{exportStatus.url}}
