--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -266,33 +266,30 @@
 
         .form-group
           label Free search in the entries
-          input.input-sm.form-control(
-            type="text", 
-            ng-model="freeSearchQuery",
-            placeholder="text ({{ counts.fullName }} entries)",
-            ng-class="{ filled : freeSearchQuery }")
+          div.free-search-input(ng-repeat="term in freeSearchModel.terms track by $index")
+            input.input-sm.form-control(
+              type="text", 
+              ng-model="term.value",
+              placeholder="text ({{ counts.fullName }} entries)",
+              ng-class="{ filled: term.value }",
+            )
+            
+            a.small(
+              ng-show="freeSearchModel.terms.length > 1",
+              ng-click="freeSearchModel.terms.splice($index, 1)"
+            ) x
+          
+          a.small.add-word(ng-click="freeSearchModel.terms.push({ value: '' })") add word
           .checkbox.pull-right
             label
-              input.small(type="checkbox", ng-model="freeSearchBeginnings")
+              input.small(type="checkbox", ng-model="freeSearchModel.beginnings")
               div.small.free-search-beginning-of-word Search beginnings of words only
+          
           .clearfix
-          .checkbox
+          .checkbox(ng-repeat="section in freeSearchModel.sections")
             label
-              input(type="checkbox", ng-model="freeSearchSections.biography")
-              div Biography
-          .checkbox
-            label
-              input(type="checkbox", ng-model="freeSearchSections.tours")
-              div Tours
-          .checkbox
-            label
-              input(type="checkbox", ng-model="freeSearchSections.narrative")
-              div Narrative
-          .checkbox
-            label
-              input(type="checkbox", ng-model="freeSearchSections.notes")
-              div Notes
-        
+              input(type="checkbox", ng-model="section.checked")
+              div {{ section.name }}
 
         button.btn.btn-default(ng-click="search()", type="submit") Search
           
