--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -41,31 +41,33 @@
                         span.text-muted(ng-show="dimension.subgroup") {{dimension.subgroup}} 
                       input.input-sm.form-control(type="text", ng-model="query[dimension.field]", ng-model-options="{debounce:1000}")
                   div(ng-switch-when="freesearch")
-                    .form-group    
-                      label {{dimension.label}} 
-                        span.text-muted(ng-show="dimension.subgroup") {{dimension.subgroup}} 
-                      input.input-sm.form-control(type="text", ng-model="freeSearchModel.query", ng-model-options="{debounce:1000}")
+                    .form-group
+                      label Free search in the entries
+                      div.free-search-input(ng-repeat="term in freeSearchModel.terms track by $index")
+                        input.input-sm.form-control(
+                          type="text", 
+                          ng-model="term.value",
+                          placeholder="text ({{ counts.fullName }} entries)",
+                          ng-class="{ filled: term.value }",
+                        )
+                        
+                        a.small(
+                          ng-show="freeSearchModel.terms.length > 1",
+                          ng-click="freeSearchModel.terms.splice($index, 1)"
+                        ) x
+                      
+                      a.small.add-word(ng-click="freeSearchModel.terms.push({ value: '' })") add word
                       .checkbox.pull-right
                         label
                           input.small(type="checkbox", ng-model="freeSearchModel.beginnings")
                           div.small.free-search-beginning-of-word Search beginnings of words only
+                      
                       .clearfix
-                      .checkbox
+                      .checkbox(ng-repeat="section in freeSearchModel.sections")
                         label
-                          input(type="checkbox", ng-model="freeSearchModel.sections.biography", ng-model-options="{debounce:1000}")
-                          div Biography
-                      .checkbox
-                        label
-                          input(type="checkbox", ng-model="freeSearchModel.sections.tours", ng-model-options="{debounce:1000}")
-                          div Tours
-                      .checkbox
-                        label
-                          input(type="checkbox", ng-model="freeSearchModel.sections.narrative", ng-model-options="{debounce:1000}")
-                          div Narrative
-                      .checkbox
-                        label
-                          input(type="checkbox", ng-model="freeSearchModel.sections.notes", ng-model-options="{debounce:1000}")
-                          div Notes
+                          input(type="checkbox", ng-model="section.checked")
+                          div {{ section.name }}
+                  
                   div(ng-switch-when="travel")
                     .form-group
                       label {{dimension.label}}
