Fixed export not working on Saved Lists.

--- a/public/lists/lists.pug
+++ b/public/lists/lists.pug
@@ -32,7 +32,7 @@
             entry-list(
                 ng-show="viewModel.selectedList",
                 entries="viewModel.selectedListEntries",
-                export="export",
+                export="export()",
                 is-saved-list-view="true",
                 remove-selected-entries-from-list="removeSelectedEntriesFromList()",
                 duplicate-list="duplicateList(name)",
