--- a/public/components/entry-field/entry-text.pug
+++ b/public/components/entry-field/entry-text.pug
@@ -1,15 +1,17 @@
-p.text-serif(
-    ng-class="{ small: fieldKey === 'notes' }"
-    ng-show="!isEditing()",
-    ng-click="startEditing()",
-)
-    span(ng-if="entry[fieldKey]") {{ entry[fieldKey] }}
-    em(ng-if="!entry[fieldKey]") ({{ fieldKey }} empty)
+div.text-serif.body-text
+    div.heading {{ fieldKey }}
+    p.text-serif(
+        ng-class="{ small: fieldKey === 'notes' }"
+        ng-show="!isEditing()",
+        ng-click="startEditing()",
+    )
+        span(ng-if="entry[fieldKey]") {{ entry[fieldKey] }}
+        em(ng-if="!entry[fieldKey]") ({{ fieldKey }} empty)
 
-textarea.focus.form-control.text-serif(
-    ng-class="{ small: fieldKey === 'notes' }"
-    rows="10",
-    ng-show="isEditing()",
-    ng-model="entry[fieldKey]",
-    ng-change="edited(fieldKey, entry[fieldKey])",
-)
+    textarea.focus.form-control.text-serif(
+        ng-class="{ small: fieldKey === 'notes' }"
+        rows="10",
+        ng-show="isEditing()",
+        ng-model="entry[fieldKey]",
+        ng-change="edited(fieldKey, entry[fieldKey])",
+    )
