--- a/public/app.css
+++ b/public/app.css
@@ -888,3 +888,12 @@ ul.list-group.entry-facet > li .controls {
   color: #888;
   font-size: .65em;
 }
+
+.linked-footnote-sheet-id {
+  display: inline;
+  width: 20em;
+  max-width: 50%;
+  margin-right: 1em;
+  position: relative;
+  top: 2px;
+}
