--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -273,7 +273,7 @@
       div.col-lg-6
         div.text-serif.check-html.body-text
           div.heading Biography
-          p(ng-bind-html="highlighted('entry_biography', superscript(entry.biography, entry.notes))")
+          p(ng-bind-html="superscript(highlighted('entry_biography', entry.biography, true), entry.notes, true)")
         
         div.text-serif.check-html.body-text
           div.heading Tours
@@ -284,7 +284,7 @@
           div.heading Narrative
           p(
             ng-repeat="narrativeParagraph in entry.narrative.split('\\n')"
-            ng-bind-html="highlighted('entry_narrative', superscript(narrativeParagraph, entry.notes))"
+            ng-bind-html="superscript(highlighted('entry_narrative', narrativeParagraph, true), entry.notes, true)"
           )
         
         div.text-serif.small.body-text.check-html
