--- a/public/index.pug
+++ b/public/index.pug
@@ -75,6 +75,8 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/search/search.js')
     script(type='text/javascript', src='/explore/explore.js')
     script(type='text/javascript', src='/entry/entry.js')
+    script(type='text/javascript', src='/entry/entry-highlighting.js')
+    script(type='text/javascript', src='/entry/entry-minimap.js')
     script(type='text/javascript', src='/edit-entry/edit-entry.js')
     script(type='text/javascript', src='/lists/lists.js')
 
