--- a/public/edit-entry/edit-entry.pug
+++ b/public/edit-entry/edit-entry.pug
@@ -8,7 +8,7 @@
                     .input-group.input-group-sm(ng-show="editingIndex")
                         input.form-control(type="text", ng-model="newIndex")
                         span.input-group-btn
-                            a.btn.btn-default(ng-href="#/entries/{{newIndex}}/edit") Go
+                            a.btn.btn-default(ng-click="editEntry(newIndex)") Go
 
                 
                 .btn-group.btn-group-sm(role="group")
