--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -17,7 +17,7 @@
           .input-group.input-group-sm(ng-show="editStatus.editingIndex")
             input.form-control(type="text", ng-model="editingIndex.newIndex")
             span.input-group-btn
-              a.btn.btn-default(ng-href="#/entries/{{editingIndex.newIndex}}") Go
+              a.btn.btn-default(ng-click="goToEntry(editingIndex.newIndex)") Go
 
         strong(ng-show="editStatus.mustActivateLatest") Activate the Latest revision to edit this entry.
         .btn-group.btn-group-sm(role="group", ng-show="!editStatus.mustActivateLatest && editStatus.exists")
