--- a/public/index.pug
+++ b/public/index.pug
@@ -82,5 +82,6 @@ html(lang="en", ng-app="app")
 
     script(type='text/javascript', src='/components/facet/facet.js')
     script(type='text/javascript', src='/components/entry-list/entry-list.js')
+    script(type='text/javascript', src='/components/entry-list/entry-list-context.js')
     script(type='text/javascript', src='/components/revision-status/revision-status.js')
     script(type='text/javascript', src='/components/entry-field/entry-field.js')
