Added URL routing for individual saved lists; closes #66.

--- a/public/components/entry-list/entry-list-context-bar.pug
+++ b/public/components/entry-list/entry-list-context-bar.pug
@@ -16,7 +16,7 @@
                     type="button",
                     ng-show="context.isSavedList",
                     ng-href="{{ '#' + context.url }}",
-                ) Back to Saved Lists
+                ) Back to Saved List
 
                 button.btn.btn-default(
                     type="button",
