--- a/public/components/entry-field/facet-template.pug
+++ b/public/components/entry-field/facet-template.pug
@@ -1,6 +1,11 @@
 div(ng-if="entryFields[fieldKey].serialized.valueIsObject" ng-repeat="(key, value) in entryFields[fieldKey].serialized.type")
     strong.small {{ key }}: 
     span(ng-if="fieldValue[key] !== undefined") {{ fieldValue[key] }}
+    a.small.italic.margin-left(
+        ng-if="fieldValue[key] !== undefined",
+        ng-click="clearObjectField(fieldKey, arrayIndex, key)",
+    ) clear
+    
     em(ng-if="fieldValue[key] === undefined") (empty)
     
 div(ng-if="!entryFields[fieldKey].serialized.valueIsObject")
