Set mentioned names to show pointed-to entry when hovered in Entry Edit (fixes #53).

--- a/public/app.css
+++ b/public/app.css
@@ -789,7 +789,11 @@ table.table {
   width: 100%;
 }
 
-li:hover > .mentioned-names-popup {
+li.list-group-item:active {
+  z-index: 1;
+}
+
+li.list-group-item:hover .mentioned-names-popup {
   display: block;
   background-color: white;
 }
