Fixed broken Full Name edit field (closes #65).

--- a/public/components/entry-field/full-name.pug
+++ b/public/components/entry-field/full-name.pug
@@ -6,6 +6,6 @@ span(
 input.focus(
     ng-show="isEditing()",
     type="text",
-    ng-model="entry[fieldKey]",
+    ng-model="fieldValue",
     ng-change="edited(fieldKey, fieldValue)",
 )
