--- a/public/index.pug
+++ b/public/index.pug
@@ -55,6 +55,9 @@ html(lang="en", ng-app="app")
     script(src="bower_components/crossfilter/crossfilter.min.js")
     script(src="bower_components/FileSaver/FileSaver.min.js")
     script(src="bower_components/jszip/dist/jszip.min.js")
+    script(src="bower_components/ckeditor/ckeditor.js")
+    script.
+      CKEDITOR.disableAutoInline = true
 
     script(src="bower_components/angular/angular.min.js")
     script(src="bower_components/angular-sanitize/angular-sanitize.min.js")
