--- a/public/components/entry-field/entry-text.pug
+++ b/public/components/entry-field/entry-text.pug
@@ -1,22 +1,15 @@
-div.text-serif.body-text(ng-class="{ narrative: fieldKey === 'narrative' }")
-    div.text-serif(
-        ng-class="{ small: fieldKey === 'notes' }",
-        ng-show="!isEditing()",
-        ng-click="startEditing()",
+.text-serif.body-text(ng-class="{ narrative: fieldKey === 'narrative', small: fieldKey === 'notes' }")
+    em.rich-text-editable-placeholder(ng-show="isEmpty") ({{ fieldKey }} empty)
+    .rich-text-editable(
+        contenteditable="true",
+        name="{{ fieldKey }}",
     )
-        div(ng-if="entry[fieldKey]")
-            span(ng-if="fieldKey !== 'narrative'") {{ entry[fieldKey] }}
-            p(
-              ng-if="fieldKey === 'narrative'",
-              ng-repeat="narrativeParagraph in entry[fieldKey].split('\\n')",
-            ) {{ narrativeParagraph }}
-        
-        em(ng-if="!entry[fieldKey]") ({{ fieldKey }} empty)
 
-    textarea.focus.form-control.text-serif(
-        ng-class="{ small: fieldKey === 'notes' }",
-        rows="10",
-        ng-show="isEditing()",
-        ng-model="entry[fieldKey]",
-        ng-change="edited(fieldKey, entry[fieldKey])",
-    )
+
+//- textarea.focus.form-control.text-serif(
+//-     ng-class="{ small: fieldKey === 'notes' }",
+//-     rows="10",
+//-     ng-show="isEditing()",
+//-     ng-model="entry[fieldKey]",
+//-     ng-change="edited(fieldKey, entry[fieldKey])",
+//- )
