Implemented editing and saving in rich text.

--- a/public/edit-entry/edit-entry.pug
+++ b/public/edit-entry/edit-entry.pug
@@ -53,7 +53,7 @@
     h1
         entry-field(
             field-key="fullName",
-            template="full-name",
+            template="entry-text",
         )
 
     .row
