--- a/public/index.pug
+++ b/public/index.pug
@@ -89,3 +89,4 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/components/entry-list/entry-list-context-bar.js')
     script(type='text/javascript', src='/components/revision-status/revision-status.js')
     script(type='text/javascript', src='/components/entry-field/entry-field.js')
+    script(type='text/javascript', src='/components/entry-field/rich-text-editor.js')
