--- a/public/index.pug
+++ b/public/index.pug
@@ -79,6 +79,7 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/explore/explore.js')
     script(type='text/javascript', src='/entry/entry.js')
     script(type='text/javascript', src='/entry/entry-highlighting.js')
+    script(type='text/javascript', src='/entry/entry-transformation.js')
     script(type='text/javascript', src='/entry/entry-minimap.js')
     script(type='text/javascript', src='/edit-entry/edit-entry.js')
     script(type='text/javascript', src='/lists/lists.js')
