--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -246,7 +246,7 @@
                 li.list-group-item(ng-repeat="e in entry.mentionedNames") 
                     div(style="font-style: italic;", ng-show="!e.entry") {{ e.name }}
                     div(style="cursor: pointer;", ng-show="e.entry") {{ e.name }}
-                    a.mentioned-names-popup(ng-show="e.entry", ng-href="#/entries/{{e.entryIndex}}")
+                    a.mentioned-names-popup(ng-show="e.entry", ng-click="goToEntry(e.entryIndex)")
                       h4 {{ e.entry.fullName }}
                       p {{ e.entry.biography.slice(0, 100) }}...
           
