--- a/public/components/entry-field/facet-template-mentionedNames.pug
+++ b/public/components/entry-field/facet-template-mentionedNames.pug
@@ -1,8 +1,5 @@
-.edit-mentioned-name(ng-mouseover="downloadMentionedNameEntry(fieldValue)")
-    div(
-        ng-if="entryFields[fieldKey].serialized.valueIsObject"
-        ng-repeat="(key, value) in entryFields[fieldKey].serialized.type"
-    )
+.edit-mentioned-name(ng-mouseover="downloadEntry(fieldValue.entryIndex)")
+    div(ng-repeat="(key, value) in entryFields[fieldKey].serialized.type")
         strong.small {{ key }}: 
         span(ng-if="fieldValue[key] !== undefined") {{ fieldValue[key] }}
         a.small.italic.margin-left(
@@ -12,6 +9,9 @@
         
         em(ng-if="fieldValue[key] === undefined") (empty)
 
-    a.mentioned-names-popup(ng-show="fieldValue.entry", ng-click="editEntry(fieldValue.entryIndex)")
-        h4 {{ fieldValue.entry.fullName }}
-        p {{ fieldValue.entry.biography.slice(0, 100) }}...
+    a.mentioned-names-popup(
+        ng-show="downloadedEntries[fieldValue.entryIndex]",
+        ng-click="editEntry(fieldValue.entryIndex)",
+    )
+        h4 {{ downloadedEntries[fieldValue.entryIndex].fullName }}
+        p {{ downloadedEntries[fieldValue.entryIndex].biography.slice(0, 100) }}...
