--- a/public/index.pug
+++ b/public/index.pug
@@ -91,3 +91,6 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/components/revision-status/revision-status.js')
     script(type='text/javascript', src='/components/entry-field/entry-field.js')
     script(type='text/javascript', src='/components/entry-field/rich-text-editor.js')
+    script(type='text/javascript', src='/components/search-field/travel-search.js')
+    script(type='text/javascript', src='/components/search-field/free-search.js')
+
