--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -194,10 +194,7 @@
     .col-lg-9
       // pre.query {{query}}
       
-      p
-        .pill(ng-repeat="pill in pills") 
-          .pill-dimension {{ pill.dimension }}
-          strong.pill-value {{ pill.value }} 
+      pills
       
       div.text-muted(ng-show="untouched") Use the fields on the left and press Enter or click the Search button to start searching.
 
