--- a/public/index.pug
+++ b/public/index.pug
@@ -93,4 +93,5 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/components/entry-field/rich-text-editor.js')
     script(type='text/javascript', src='/components/search-field/travel-search.js')
     script(type='text/javascript', src='/components/search-field/free-search.js')
+    script(type='text/javascript', src='/components/pills/pills.js')
 
