--- a/public/index.pug
+++ b/public/index.pug
@@ -5,7 +5,7 @@ html(lang="en", ng-app="app")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     base(href="/")
     link(rel="shortcut icon", href="/favicon.png")
-    title Grand Tour Explorer
+    title(ng-bind="getTitle()")
       
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
