Fixed sorting for date of first travel, removed birth date and birth place options, added greyed-out apperance for when sorting dimension is empty.

--- a/public/app.css
+++ b/public/app.css
@@ -940,3 +940,9 @@ ul.list-group.entry-facet > li .controls {
   top: 0;
   left: 0;
 }
+
+.sorted-dimension-empty,
+.sorted-dimension-empty .entry-list-item a {
+  font-style: italic;
+  color: #888;
+}
