--- a/public/components/entry-list/entry-list.pug
+++ b/public/components/entry-list/entry-list.pug
@@ -29,16 +29,14 @@
         span sort by...
         span.caret
       ul.dropdown-menu
-        li(ng-repeat="dimension in sortModel.activeSortableDimensions")
-          a(ng-click="sortModel.dimension = dimension.sorting;", ng-class="{ 'bg-info' : sortModel.dimension === dimension.sorting }") {{ dimension.label }}
-        li.divider
-        li
-          a(ng-click="sortModel.dimension = 'index'", ng-class="{ 'bg-info' : sortModel.dimension === 'index' }") Index
+        li(ng-repeat="option in sortModel.options")
+          a(ng-click="sortModel.current = option", ng-class="{ 'bg-info' : sortModel.current === option }") {{ option.label }}
+        
         li.divider
         li
           .checkbox.entry-order-checkbox
             label
-              input(type="checkbox", ng-model="sortModel.reverseSorting")
+              input(type="checkbox", ng-model="sortModel.reversed")
               div reverse order
 
     div.btn-group.list-option
@@ -73,7 +71,7 @@
   .panel-body(ng-show="entries && entries.length")
     table.table.table-hover
       tbody.entry-row
-        tr(ng-repeat="entry in entries | orderBy : sortModel.dimension : sortModel.reverseSorting | limitTo : entriesPerPage || null : entriesPerPage * pageNumber", ng-class="{ warning: entry.selected }")
+        tr(ng-repeat="entry in entries | orderBy : sortModel.current.sortFn : sortModel.reversed | limitTo : entriesPerPage || null : entriesPerPage * pageNumber", ng-class="{ warning: entry.selected, 'sorted-dimension-empty': !sortModel.current.sortFn(entry) }")
           td.entry-checkbox
             input(type="checkbox", ng-model="entry.selected")
           td.entry-list-item
