--- a/public/index.pug
+++ b/public/index.pug
@@ -83,6 +83,7 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/entry/entry-minimap.js')
     script(type='text/javascript', src='/edit-entry/edit-entry.js')
     script(type='text/javascript', src='/lists/lists.js')
+    script(type='text/javascript', src='/lists/list-service.js')
 
     script(type='text/javascript', src='/components/facet/facet.js')
     script(type='text/javascript', src='/components/entry-list/entry-list.js')
