Changed wording on search dimension.

--- a/public/components/search-field/travel-search.pug
+++ b/public/components/search-field/travel-search.pug
@@ -58,7 +58,7 @@
         span.date-query-type.date-query-type-label search by: 
         span.date-query-type(
             ng-click="travelModel.date.queryType = 'exact'",
-            ng-class="{selected: travelModel.date.queryType === 'exact'}") exact year
+            ng-class="{selected: travelModel.date.queryType === 'exact'}") exact date
         span.date-query-type(
             ng-click="travelModel.date.queryType = 'range'",
-            ng-class="{selected: travelModel.date.queryType === 'range'}") range of years
+            ng-class="{selected: travelModel.date.queryType === 'range'}") range of dates
